--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "starwars-films",
   "version": "0.0.0",
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "prejohny": "echo 'oh yeah !'",
+    "johny": "echo 'ah que'",
+    "prestart": "npm run johny && echo 'test'",
+    "start": "ng serve -o  --port=4201",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
@@ -18,11 +22,13 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "^14.2.2",
     "@angular/cli": "~14.2.1",
     "@angular/compiler-cli": "^14.0.0",
     "@types/jasmine": "~4.0.0",
